[gd_scene load_steps=8 format=3 uid="uid://dv2y18ye8j7o0"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_20hqd"]
[ext_resource type="Texture2D" uid="uid://dmnpldgvcuogc" path="res://scenes/spr_bg.png" id="2_037g4"]
[ext_resource type="Texture2D" uid="uid://cm2s5wdnc1cy4" path="res://assets/spr_logo2.png" id="3_x1e42"]
[ext_resource type="PackedScene" uid="uid://nbaodrlopo7y" path="res://ui/components/game_settings.tscn" id="4_tlf3x"]
[ext_resource type="AudioStream" uid="uid://dpmuc2x5riune" path="res://assets/sounds/menu/snd_menu_select.wav" id="5_5lxid"]
[ext_resource type="AudioStream" uid="uid://dxnjv8cf5koqo" path="res://assets/music/bgm1.mp3" id="5_k4sxh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6ojf"]
bg_color = Color(0.188235, 0.129412, 0.176471, 1)

[node name="MainMenuScene" type="Node2D"]
script = ExtResource("1_20hqd")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.5
offset_top = -12.0
offset_right = 47.5
grow_horizontal = 2
grow_vertical = 0

[node name="MusicCredit" type="Label" parent="UI/CenterContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Music by Kevin MacLeod"

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x6ojf")

[node name="Sprite2D" type="Sprite2D" parent="UI/Panel"]
texture = ExtResource("2_037g4")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogoContainer" type="MarginContainer" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 3.09

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI/Panel/VBoxContainer/LogoContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 1.83
alignment_vertical = 0

[node name="TextureRect" type="TextureRect" parent="UI/Panel/VBoxContainer/LogoContainer/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("3_x1e42")

[node name="MarginContainer" type="MarginContainer" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 2.34

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 16

[node name="CenterContainer" type="CenterContainer" parent="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MainMenu" type="VBoxContainer" parent="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
theme_override_constants/separation = 5

[node name="ContinueButton" type="Button" parent="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MainMenu"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "continue"

[node name="NewGameButton" type="Button" parent="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MainMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "New Game"

[node name="ExitButton" type="Button" parent="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MainMenu"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "leave_game"

[node name="SettingsContainer" type="MarginContainer" parent="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="GameSettings" parent="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer/SettingsContainer" instance=ExtResource("4_tlf3x")]
layout_mode = 2

[node name="Footer" type="MarginContainer" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel/VBoxContainer/Footer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Credit1" type="Label" parent="UI/Panel/VBoxContainer/Footer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 8
text = "       2024"
vertical_alignment = 2

[node name="Credit2" type="Label" parent="UI/Panel/VBoxContainer/Footer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 8
text = "        furudbat & Blacktiger5"
vertical_alignment = 2

[node name="Bgm1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_k4sxh")
volume_db = -2.802
bus = &"Music"

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_5lxid")
volume_db = -9.699
pitch_scale = 1.12
bus = &"Sound"

[connection signal="pressed" from="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MainMenu/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MainMenu/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="UI/Panel/VBoxContainer/MarginContainer/HBoxContainer/CenterContainer/MainMenu/ExitButton" to="." method="_on_exit_button_pressed"]
